k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: python-app
  labels:
    app: python-app
    managed-by: mlops-pipeline
