k8s/03-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: python-app
  labels:
    app: backend
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
        component: api
    spec:
      containers:
        - name: backend
          image: sandeeptiwari0206/python-backend:IMAGE_TAG
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: python-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
